gitlab/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: gitlab
  namespace: gitlab  
spec:
  selector:
    app: gitlab
  ports:
  - name: default-port
    protocol: TCP
    port: 11443
    targetPort: 443
  - name: docker-port
    protocol: TCP
    port: 11550
    targetPort: 5050
