gitlab/gitlab-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitlab-ingress
  namespace: gitlab
  annotations:
    #kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  ingressClassName: nginx
  tls:
  - hosts: 
    - gitlab.slonnik.site
    - docker.slonnik.site
    secretName: main-tls-secret
  rules:
  - host: gitlab.slonnik.site
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: gitlab
            port:
              number: 11443
              #number: 11550
      - path: "/v2"
        pathType: Prefix
        backend:
          service:
            name: gitlab
            port:
              number: 11550
